add objective of game and timer comment to show where DOM link will be

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <header>DOG MEMORY</header>
     <h3>HOW TO PLAY</h3>
-    <h4>Timer:     </h4>
+        <p>Objective: Match all pairs of cards within the allotted time!</p>
+    <h4>Timer: <!--<span>This is where actual countdown will link to goes</span> --> </h4>
     <div class="card-container">
         <div class="card">
             <div class="back-card" id="0"></div>
