update html and created initial cards in css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h3>HOW TO PLAY</h3>
         <p>Objective: Match all pairs of cards within the allotted time!</p>
     <h4>Timer: <!--<span>This is where actual countdown will link to goes</span> --> </h4>
-    <div class="card-container">
+    <section class="card-container">
         <div class="card">
             <div class="back-card" id="0"></div>
             <div class="front-card"></div>
@@ -61,6 +61,7 @@
             <div class="back-card" id="11"></div>
             <div class="front-card"></div>
         </div>
-    <button>PLAY AGAIN</button>
+        </div>
+<button>PLAY AGAIN</button>
 </body>
 </html>
