stub up functions, modify html and css with <main> and <section>

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <title>DOG MEMORY</title>
 </head>
 <body>
-    <header>DOG MEMORY</header>
+    <h1>DOG MEMORY</h1>
     <h3>HOW TO PLAY</h3>
         <p>Objective: Match all pairs of cards within the allotted time!</p>
     <h4>Timer: <!--<span>This is where actual countdown will link to goes</span> --> </h4>
+    <main>
     <section class="card-container">
         <div class="card">
             <div class="back-card" id="0"></div>
@@ -34,8 +35,8 @@
                 <img src="images/img-2.jpg"></div>
         </div>
     </div>
-
     </section>
+    </main>
 <button>PLAY AGAIN</button>
 </body>
 </html>
