--- a/index.html
+++ b/index.html
@@ -12,31 +12,56 @@
     <h3>HOW TO PLAY</h3>
         <p>Objective: Match all pairs of cards within the allotted time!</p>
     <h4>Timer: <!--<span>This is where actual countdown will link to goes</span> --> </h4>
-    <main>
-    <section class="card-container">
+    <div class="card-container">
         <div class="card">
             <div class="back-card" id="0"></div>
-            <div class="front-card">
-                <img src="images/img-1.jpg"></div>
+            <div class="front-card"></div>
         </div>
         <div class="card">
             <div class="back-card" id="1"></div>
-            <div class="front-card">
-                <img src="images/img-1.jpg"></div>
+            <div class="front-card"></div>
         </div>
         <div class="card">
             <div class="back-card" id="2"></div>
-            <div class="front-card">
-                <img src="images/img-2.jpg"></div>
+            <div class="front-card"></div>
         </div>
         <div class="card">
             <div class="back-card" id="3"></div>
-            <div class="front-card">
-                <img src="images/img-2.jpg"></div>
+            <div class="front-card"></div>
+        </div>
+        <div class="card">
+            <div class="back-card" id="4"></div>
+            <div class="front-card"></div>
+        </div>
+        <div class="card">
+            <div class="back-card" id="5"></div>
+            <div class="front-card"></div>
+        </div>
+        <div class="card">
+            <div class="back-card" id="6"></div>
+            <div class="front-card"></div>
+        </div>
+        <div class="card">
+            <div class="back-card" id="7"></div>
+            <div class="front-card"></div>
+        </div>
+        <div class="card">
+            <div class="back-card" id="8"></div>
+            <div class="front-card"></div>
+        </div>
+        <div class="card">
+            <div class="back-card" id="9"></div>
+            <div class="front-card"></div>
+        </div>
+        <div class="card">
+            <div class="back-card" id="10"></div>
+            <div class="front-card"></div>
+        </div>
+        <div class="card">
+            <div class="back-card" id="11"></div>
+            <div class="front-card"></div>
         </div>
     </div>
-    </section>
-    </main>
 <button>PLAY AGAIN</button>
 </body>
 </html>
