update timer element and add start button

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <title>DOG MEMORY</title>
 </head>
 <body>
-    <h1>DOG MEMORY</h1>
+    <h1>DOGGY MEMORY<br>
+    (SEI LOVELACE EDITION)</h1>
     <h3>HOW TO PLAY</h3>
-        <p>Objective: Match all pairs of cards within the allotted time!</p>
-    <h4>Timer: <!--<span>This is where actual countdown will link to goes</span> --> </h4>
+    <p>Objective: Match all pairs of dogs within the allotted time!</p>
+    <button id="start-btn">START</button>
+    <div id="timer">Timer: 120</div>
     <div class="card-container">
         <div class="card">
             <div class="back-card" id="0"></div>
