add onclick function to start button / updated timer element from div to h5

--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <title>DOG MEMORY</title>
 </head>
 <body>
-    <h1>DOGGY MEMORY<br>
+    <h1>DOG MEMORY<br>
     (SEI LOVELACE EDITION)</h1>
-    <h3>HOW TO PLAY</h3>
-    <p>Objective: Match all pairs of dogs within the allotted time!</p>
-    <button id="start-btn">START</button>
-    <div id="timer">Timer: 120</div>
+    <h3 id="objective">Objective: Match all pairs of dogs within the allotted time!</h3>
+    <button id="start-btn" onclick="countdown()">START</button>
+    <h5 id="timer">Timer: 25</h5>
     <div class="card-container">
         <div class="card">
             <div class="back-card" id="0"></div>
