update html and css for play again feature

--- a/index.html
+++ b/index.html
@@ -63,6 +63,6 @@
             <div class="front-card"></div>
         </div>
     </div>
-<button>PLAY AGAIN</button>
+<button id="playagain-btn" onclick="playAgain()">PLAY AGAIN</button>
 </body>
 </html>
