remove front-card div in html / reassign images to card lclass  div in JS / convert countdown to min and sec / modify checkForWin function'

--- a/index.html
+++ b/index.html
@@ -4,63 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     <script defer src="main.js"></script>
     <title>DOG MEMORY</title>
 </head>
 <body>
     <h1>DOG MEMORY<br>
     (SEI LOVELACE EDITION)</h1>
-    <h3 id="objective">Objective: Match all pairs of dogs within the allotted time!</h3>
+    <h3 id="objective"></h3>
     <button id="start-btn" onclick="countdown()">START</button>
-    <h5 id="timer">Timer: 25</h5>
+    <h5 id="timer">Timer: 2:00</h5>
     <div class="card-container">
         <div class="card">
             <div class="back-card" id="0"></div>
-            <div class="front-card"></div>
+ 
         </div>
         <div class="card">
             <div class="back-card" id="1"></div>
-            <div class="front-card"></div>
+ 
         </div>
         <div class="card">
             <div class="back-card" id="2"></div>
-            <div class="front-card"></div>
+ 
         </div>
         <div class="card">
             <div class="back-card" id="3"></div>
-            <div class="front-card"></div>
+ 
         </div>
         <div class="card">
             <div class="back-card" id="4"></div>
-            <div class="front-card"></div>
+ 
         </div>
         <div class="card">
             <div class="back-card" id="5"></div>
-            <div class="front-card"></div>
+ 
         </div>
         <div class="card">
             <div class="back-card" id="6"></div>
-            <div class="front-card"></div>
+ 
         </div>
         <div class="card">
             <div class="back-card" id="7"></div>
-            <div class="front-card"></div>
+ 
         </div>
         <div class="card">
             <div class="back-card" id="8"></div>
-            <div class="front-card"></div>
+ 
         </div>
         <div class="card">
             <div class="back-card" id="9"></div>
-            <div class="front-card"></div>
+ 
         </div>
         <div class="card">
             <div class="back-card" id="10"></div>
-            <div class="front-card"></div>
+ 
         </div>
         <div class="card">
             <div class="back-card" id="11"></div>
-            <div class="front-card"></div>
+ 
         </div>
     </div>
 <button id="playagain-btn" onclick="playAgain()">PLAY AGAIN</button>
