clean up excess code space / disabled card clicking until start game button is selected

--- a/index.html
+++ b/index.html
@@ -14,58 +14,46 @@
     <h1>DOG MEMORY<br>
     (SEI LOVELACE EDITION)</h1>
     <h3 id="objective"></h3>
-    <button id="start-btn" onclick="countdown()">START</button>
-    <h5 id="timer">Timer: 2:00</h5>
+    <button id="start-btn" onclick="countdown()">START GAME</button>
+    <button id="playagain-btn" onclick="playAgain()">PLAY AGAIN</button>
+    <h5 id="timer">TIME: 2:00</h5>
     <div class="card-container">
         <div class="card">
             <div class="back-card" id="0"></div>
- 
         </div>
         <div class="card">
             <div class="back-card" id="1"></div>
- 
         </div>
         <div class="card">
             <div class="back-card" id="2"></div>
- 
         </div>
         <div class="card">
             <div class="back-card" id="3"></div>
- 
         </div>
         <div class="card">
             <div class="back-card" id="4"></div>
- 
         </div>
         <div class="card">
             <div class="back-card" id="5"></div>
- 
         </div>
         <div class="card">
             <div class="back-card" id="6"></div>
- 
         </div>
         <div class="card">
             <div class="back-card" id="7"></div>
- 
         </div>
         <div class="card">
             <div class="back-card" id="8"></div>
- 
         </div>
         <div class="card">
             <div class="back-card" id="9"></div>
- 
         </div>
         <div class="card">
             <div class="back-card" id="10"></div>
- 
         </div>
         <div class="card">
             <div class="back-card" id="11"></div>
- 
         </div>
     </div>
-<button id="playagain-btn" onclick="playAgain()">PLAY AGAIN</button>
 </body>
 </html>
