Clean up unused code / Rename variables / Adjusted lightbox CSS

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     </div>
     <div id="lightbox">
         <div class="lightbox-bg"></div>
-        <div class="lightbox-message">
+        <div class="lightbox-window">
           <button id="close-btn">X</button>
-          <h1 id="message"></h1>
+          <h1 id="lb-message"></h1>
         </div>
       </div>
 </body>
